Mehrfachauswahl für die Wochentage, an denen die Glocke aktiv sein soll ... mindestens ein Tag muss angegeben werden.

--- a/mindbell-app/res/values-de/strings.xml
+++ b/mindbell-app/res/values-de/strings.xml
@@ -63,6 +63,7 @@
     <string name="prefsCategoryTry">Testen:</string>
     <string name="prefsRingBell">Glocke schlagen</string>
     <string name="prefsActiveOnDaysOfWeek">Tage an denen die Glocke aktiv ist &#8230;</string>
+    <string name="atLeastOneActiveDayNeeded">Mindestens einen Tag angeben</string>
     
     <!-- Status bar notification -->
     <string name="statusTitleBellActive">Glocke der Achtsamkeit ist aktiv</string>
