Show abbreviations for weekdays in preferences dialog and in notification

--- a/mindbell-app/res/values-de/strings.xml
+++ b/mindbell-app/res/values-de/strings.xml
@@ -67,7 +67,7 @@
     
     <!-- Status bar notification -->
     <string name="statusTitleBellActive">Glocke der Achtsamkeit ist aktiv</string>
-    <string name="statusTextBellActive">Glocke schlägt von _STARTTIME_ bis _ENDTIME_</string>
+    <string name="statusTextBellActive">_STARTTIME_ bis _ENDTIME_ am _WEEKDAYS_</string>
 
     <!-- Reasons why bell is muted -->
     <string name="reasonMutedWithPhone">Glocke still wie das Handy</string>
